# libaig

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  README.rst
aig-cat/: CMakeLists.txt  main.c
aig-ls/: CMakeLists.txt  main.c
aig2sat/: CMakeLists.txt  main.c
libaig/: CMakeLists.txt
libaig/include/aig/: aig.h
libaig/src/: aig_t.h  bitbuffer.c  bitbuffer.h  fanout.c  fanout_count.c  free.c  getters.c  infer.c  infer.h  level.c  load.c  lookup.c  new.c  node.c  node_iter.c  node_iter.h  parse.c  parse.h  sat.c
